fix footer center

--- a/css/common.css
+++ b/css/common.css
@@ -621,6 +621,9 @@ dropdown-toggle:hover .dropdown-menu {
   overflow: hidden;
   min-height: 100vh;
   color: white;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .footer .footer-section::before {
